# parmalgt

./: .gitignore  .gitmodules  Background.cc  Background.h  CMakeLists.txt  ChangeLog  Clover.hpp  Communicator.hpp  Dirac.hpp  Doxyfile  Doxyfile.in  Fermi.cc  GammaStuff.h  Geometry.hpp  IO.cc  IO.hpp  Invert.cc  Inverter.hpp  Kernels.hpp  LocalField.hpp  LocalGluonField.hpp  LocalQuench.cc  LocalQuenchFlow.cc  LocalQuenchFlowTorus.cc  Makefile.am  Makefile.in  MassC.h  Methods.hpp  MyMath.cc  MyMath.h  MyQCD.cc  MyQCD.h  MyRand.cc  MyRand.h  MyTime.cc  MyTime.h  ParQuenched.cc  Point.cc  Point.hpp  PtTypes.hpp  (+40 more)
SU2/: SU2.cfg  SU2pt.cc  SU2pt.h  input.h  lancia.sh  nspt.cc  nspt.h  quench.sh
SU2/.svn/: entries
SU2/.svn/text-base/: GaugeSU2.cc.svn-base  SU2envNODEpt.h.svn-base  damocle.dag.svn-base  lattice.h.svn-base  makefile.svn-base
SU2/result/.svn/: entries
SU2/result/plaquette/.svn/: entries
analytic/: E.py  Fmunu.py
cmake/modules/: add_unit_test.cmake
dSFMT/.svn/: entries
dSFMT/html/.svn/: entries
docs/: ct_compact.tex  liks.tex  sf-nspt.tex
docs/.svn/: entries
docs/.svn/text-base/: little.pdf.svn-base  little.tex.svn-base
docs/plots/: n0nor.tex  norm.tex
include/Kernels/generic/: Plaquette.hpp  Project.hpp  RungeKutta.hpp
makefiles.local/: makefile.local.mac-michele
makefiles.local/.svn/: entries
makefiles.local/.svn/text-base/: makefile.local.alba.svn-base  makefile.local.aurora.svn-base  makefile.local.cento.svn-base  makefile.local.test64.svn-base
perform/: README  accessi.gp  accessi3.cc  ptjnk.cc  testflops.cc  verifica.c  verifica.cc  verifica1.gp
perform/.svn/: entries
perform/.svn/text-base/: accessi.cc.svn-base  accessi.pl.svn-base  accessi3.gp.svn-base  makefile.svn-base  ptconf.txt.svn-base  ptjnk.gp.svn-base  verifica.gp.svn-base
perform/result/.svn/: entries
perform/stampa/.svn/: entries
renorm/: GF.cfg  GaugeFixing.cc  NewRenorm.cc  RenLib.cc  RenLib.h  gf.h  makefile  momREF.txt  renorm.cc  running.sh
renorm/.svn/: entries
renorm/.svn/text-base/: Ren.cfg.svn-base  renorm_pars.h.svn-base
renorm/result/.svn/: entries
result/.svn/: entries
result/plaquette/: plaq_sf_wrong_gf.txt
result/plaquette/.svn/: entries
runscripts/: README  run.sh  submit.py
spectr/: Dirac.cfg  TestSpectr.cfg  dirac_spec.h  makefile  test_dd.cc  test_dd.pl
spectr/.svn/: entries
spectr/.svn/text-base/: dirac_par.h.svn-base  diractest.cc.svn-base  test_d.cc.svn-base  test_lus.cc.svn-base  test_lus.pl.svn-base
spectr/spettri/.svn/: entries
src/: CMakeLists.txt
src/background/: AbelianBackground.cpp  AbelianBackground.hpp  Background.cpp  Background.hpp  BackgroundHelper.hpp  BackgroundInterface.hpp  CMakeLists.txt  ScalarBackground.hpp  TrivialBackground.hpp
src/background/tests/: CMakeLists.txt  Common.hpp  test_AbelianBackground.cpp  test_BackgroundHelper.cpp  test_TrivialBackground.cpp
src/common/: CMakeLists.txt  Communicator.hpp  Helper.hpp  Utils.hpp
src/fields/: CMakeLists.txt  LocalField.hpp  Traits.hpp
src/fields/tests/: CMakeLists.txt  test_LocalField.cpp
src/geometry/: CMakeLists.txt  Geometry.hpp  Point.cpp  Point.hpp
src/geometry/tests/: CMakeLists.txt  test_Geometry.cpp  test_Point.cpp
src/kernels/: CMakeLists.txt  IO.cpp  IO.hpp  Kernels.hpp  Plaquette.hpp  Project.hpp  RungeKutta.hpp  uparam.hpp  util.hpp
src/kernels/tests/: CMakeLists.txt  test_Kernels.cpp
src/methods/: CMakeLists.txt  Methods.hpp
src/qcd/: CMakeLists.txt  newMyQCD.hpp  newQCDpt.hpp
src/qcd/tests/: CMakeLists.txt  test_BGptSU3.cpp  test_newQCDpt.cpp  test_ptSU3.cpp
src/runtimes/: CMakeLists.txt  LocalQuench.cpp  LocalQuenchFlow.cc  LocalQuenchFlowTorus.cc  LocalQuenchSF.cpp
src/types/: CMakeLists.txt  PtAlgo.hpp  PtTypes.hpp  Types.hpp
src/types/tests/: CMakeLists.txt  test_PtTypes.cpp
testing/: Helper.h  Makefile  Makefile.am  Makefile.in  configure.ac  test_Bgfield.cc  test_Clover.cc  test_Communicator.cc  test_CommunicatorSU3.cc  test_Dirac.cc  test_Geometry.cc  test_Helper  test_Helper.cc  test_LocalField.cc  test_MyMath.cc  test_Point.cc  test_PtTypes.cc  test_SU3.cc  test_newQCDpt.cc  test_ranlxdSU3.cc
tools/: ConvertCouplings.cc  Loop.cfg  makefile  plaq.pl
tools/.svn/: entries
tools/.svn/text-base/: Conversion.txt.svn-base  NewWilLoop.cc.svn-base  fftTest.cc.svn-base  testAccuracy.cc.svn-base  testGM.cc.svn-base
